--- a/package.json
+++ b/package.json
@@ -31,11 +31,7 @@
   "author": "Benjamin Toll <benjam72@yahoo.com> (http://www.benjamintoll.com)",
   "license": "MIT",
   "dependencies": {
-    "chalk": "^1.1.3",
-    "esprima": "^2.7.2",
-    "js-beautify": "^1.6.2",
-    "logger": "git+https://github.com/btoll/logger.git",
-    "yargs": "^3.32.0"
+    "s": "git+https://github.com/btoll/s.git"
   },
   "devDependencies": {
     "babel-core": "^6.7.6",
